--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,12 @@
 [package]
-name = "log-buffer"
+name = "log_buffer"
 version = "0.1.0"
 authors = ["Stallmanifold <stallmanifold@gmail.com>"]
 edition = "2018"
 description = "A library providing ring buffers that store UTF-8 strings for logging."
+
+[lib]
+name = "log_buffer"
+
 
 [dependencies]
