--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "log_buffer"
 version = "1.0.0"
 authors = ["Stallmanifold <stallmanifold@gmail.com>"]
 edition = "2018"
-description = "A library providing ring buffers that stores UTF-8 strings for logging."
+description = "A library providing ring buffers that store UTF-8 strings for logging."
 
 [lib]
 name = "log_buffer"
